Fix scrolling overflow issues

--- a/user/src/App.css
+++ b/user/src/App.css
@@ -3,11 +3,24 @@
 body{
     width: 100vw;
     margin: 0;
-    padding: 2vw 3vw;
+    padding: 0;
     background-color: #121213;
     box-sizing: border-box;
     overflow-x: hidden;
+}
+
+#container{
+    width: 100%;
+    padding: 2vw 3vw;
+    box-sizing: border-box;
+    overflow-x: hidden;
     overflow-y: auto;
+    max-width: 100%;
+}
+
+#data{
+    width: 100%;
+    max-width: 100%;
 }
 
 *{
